Update all locales with the latest Transifex translations

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -2376,6 +2376,7 @@ ar:
   js:
     saving: 'حفظ...'
     changes_saved: 'تم حفظ التغييرات.'
+    authorising: "تفويض ..."
     save_changes_first: حفظ التغييرات أولا.
     all_changes_saved: تم حفظ جميع التغييرات
     unsaved_changes: لم تحفظ التغييرات
@@ -3147,6 +3148,7 @@ ar:
         payment_state: "حالة الدفعة"
     errors:
       messages:
+        included_price_validation: "لا يمكن تحديده إلا إذا قمت بتعيين منطقة ضريبية افتراضية"
         blank: "لا يمكن أن تكون فارغة"
     layouts:
       admin:
@@ -3357,6 +3359,13 @@ ar:
           deactivation_warning: "يمكن أن يؤدي إلغاء تنشيط طريقة الدفع إلى اختفاء طريقة الدفع من قائمتك. بدلاً من ذلك ، يمكنك إخفاء طريقة الدفع من صفحة الخروج عن طريق تعيين الخيار \"عرض\" إلى\"المكتب الخلفي فقط\"."
         providers:
           provider: "مزود"
+          check: "النقد / التحويل الإلكتروني / إلخ. (المدفوعات التي لا تتطلب المصادقة التلقائية)"
+          migs: "خدمة بوابة الإنترنت من ( MasterCard Internet Gateway Service MIGS)"
+          paypalexpress: "باي بال اكسبريس"
+          stripeconnect: "Stripe SCA"
+          stripesca: "Stripe SCA"
+          bogus: "Bogus"
+          bogussimple: "BogusSimple"
       payments:
         source_forms:
           stripe:
@@ -3592,7 +3601,23 @@ ar:
       paused: التعليق
       canceled: الالغاء
     paypal:
+      already_refunded: "تم رد هذه الدفعة ولا يمكن اتخاذ أي إجراء آخر بشأنها."
+      no_payment_via_admin_backend: "لا يمكنك شحن حسابات PayPal من خلال المسؤول  للواجهة الخلفية في الوقت الحالي."
+      transaction: "معاملة PayPal"
+      payer_id: "معرف الدافع"
+      transaction_id: "رقم المعاملة"
+      token: "رمز"
+      refund: "إعادة المال"
       refund_amount: "القيمة"
+      original_amount: "المبلغ الأصلي: %{amount}"
+      refund_successful: "تم استرداد المال عبر  PayPal بنجاح"
+      refund_unsuccessful: "استرداد المال عبر  PayPal غير ناجح"
+      actions:
+        refund: "إعادة المال"
+      flash:
+        cancel: "لا تريد استخدام PayPal؟ لا يوجد مشكلة."
+        connection_failed: "تعذر الاتصال بـ PayPal."
+        generic_error: "فشل PayPal. %{reasons}"
     users:
       form:
         account_settings: إعدادت الحساب
