--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -151,10 +151,6 @@ en:
       not_array_error: "must be an array"
       invalid_element_error: "must contain only valid integers"
 
-  datetime_picker_ui:
-    current_text: Now
-    close_text: Done
-    time_text: Time
   enterprise_mailer:
     confirmation_instructions:
       subject: "Please confirm the email address for %{enterprise}"
@@ -3594,6 +3590,8 @@ See the %{link} to find out more about %{sitename}'s features and to start using
           remember_this_card: Remember this card?
     date_picker:
       flatpickr_date_format: "Y-m-d H:i"
+      today: "Today"
+      now: "Now"
     orders:
       error_flash_for_unavailable_items: "An item in your cart has become unavailable. Please update the selected quantities."
       edit:
