--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3589,7 +3589,8 @@ See the %{link} to find out more about %{sitename}'s features and to start using
           or_enter_new_card: "Or, enter details for a new card:"
           remember_this_card: Remember this card?
     date_picker:
-      flatpickr_date_format: "Y-m-d H:i"
+      flatpickr_date_format: "Y-m-d"
+      flatpickr_datetime_format: "Y-m-d H:i"
       today: "Today"
       now: "Now"
     orders:
