--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3117,6 +3117,7 @@ See the %{link} to find out more about %{sitename}'s features and to start using
     tax rate: "Tax Rates"
     new_tax_rate: "New Tax Rate"
     tax_category: "Tax Category"
+    tax_rates: "Tax Rates"
     rate: "Rate"
     tax_rate_amount_explanation: "Tax rates are a decimal amount to aid in calculations, (i.e. if the tax rate is 5% then enter 0.05)"
     included_in_price: "Included in Price"
