--- a/config/locales/en_CA.yml
+++ b/config/locales/en_CA.yml
@@ -2964,6 +2964,7 @@ en_CA:
     tax rate: "Tax Rates"
     new_tax_rate: "New Tax Rate"
     tax_category: "Tax Category"
+    tax_rates: "Tax Rates"
     rate: "Rate"
     tax_rate_amount_explanation: "Tax rates are a decimal amount to aid in calcuations, (i.e. if the tax rate is 5% then enter 0.05)"
     included_in_price: "Included in Price"
@@ -3275,7 +3276,6 @@ en_CA:
         providers:
           provider: "Provider"
           check: "Cash/EFT/Bank Transfer etc. (payments for which automatic validation is not required)"
-          migs: "MasterCard Internet Gateway Service (MIGS)"
           pin: "Pin Payments (Only applicable to users in Australia)"
           paypalexpress: "PayPal Express"
           stripeconnect: "Stripe"
@@ -3462,6 +3462,9 @@ en_CA:
         unpaid_order: "Your order was unpaid so no refund has been made"
         paid_order: "Your order was paid so %{distributor} has refunded the full amount"
         credit_order: "Your order was paid so your account has been credited"
+        subject: "Cancellation of Order"
+      cancel_email_for_shop:
+        greeting: "Dear %{name},"
         subject: "Cancellation of Order"
       confirm_email:
         subject: "Order Confirmation"
