--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -2955,6 +2955,7 @@ es:
     display_currency: "Mostrar moneda"
     choose_currency: "Elegir moneda"
     mail_method_settings: "Configuración del método de correo"
+    mail_settings_notice_html: "Algunas de las siguientes configuraciones no se pueden editar y se enumeran aquí solo con fines de depuración. Se pueden realizar cambios actualizando los secretos de la instancia y aprovisionándolos con <a href='https://github.com/openfoodfoundation/ofn-install'>ofn-install</a> . Comuníquese con el equipo global de OFN para obtener más detalles."
     general: "General"
     enable_mail_delivery: "Habilitar entrega de correo"
     send_mails_as: "Enviar correos como"
@@ -3281,7 +3282,6 @@ es:
         providers:
           provider: "Proveedor"
           check: "Efectivo / transferencia / etc. (pagos para los que no se requiere validación automática)"
-          migs: "MasterCard Internet Gateway Service (MIGS)"
           pin: "Pin Payments"
           paypalexpress: "PayPal Express"
           stripeconnect: "Stripe"
