--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -3021,6 +3021,7 @@ ru:
     tax rate: "Налоговые Ставки"
     new_tax_rate: "Новая Налоговая Ставка"
     tax_category: "Налоговая Категория"
+    tax_rates: "Налоговые Ставки"
     rate: "Ставка"
     tax_rate_amount_explanation: "Налоговые ставки представляют собой десятичную сумму для помощи в расчетах (т.е. если налоговая ставка составляет 5%, введите 0,05)"
     included_in_price: "Включено в Стоимость"
@@ -3332,7 +3333,6 @@ ru:
         providers:
           provider: "Провайдер"
           check: "Наличные/ EFT/т. д. (платежи, для которых автоматическая проверка не требуется)"
-          migs: "Служба Интернет-шлюза MasterCard (MIGS)"
           pin: "Пин Платежи"
           paypalexpress: "PayPal Express"
           stripeconnect: "Stripe"
@@ -3519,6 +3519,9 @@ ru:
         unpaid_order: "Ваш заказ не был оплачен, поэтому возврат средств не производился."
         paid_order: "Ваш заказ был оплачен, поэтому %{distributor} вернул полную сумму"
         credit_order: "Ваш заказ был оплачен, поэтому на ваш счет поступил платеж"
+        subject: "Отмена заказа"
+      cancel_email_for_shop:
+        greeting: "Уважаемый %{name}!"
         subject: "Отмена заказа"
       confirm_email:
         subject: "Подтверждение заказа"
