add translation for question mark tooltip

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2775,6 +2775,7 @@ See the %{link} to find out more about %{sitename}'s features and to start using
         min_quantity: "Min quantity"
         max_quantity: "Max quantity"
       price_breakdown: "Price breakdown"
+      unit_price_tooltip: "This is the unit price of this product. It allows you to compare the price of products independent of packaging sizes & weights."
     variants:
       on_demand:
         "yes": "On demand"
