--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -622,6 +622,7 @@ fr:
         max_fulfilled_units: "Nombre max d'unités commandées"
         order_error: "Des erreurs doivent être résolues avant de pouvoir mettre à jour les commandes.\nLes champs entourés en rouge contiennent des erreurs."
         variants_without_unit_value: "ATTENTION: certaines variantes n'ont pas de nombre d'unités"
+        all: "Tout"
       select_variant: "Rechercher un produit et sélectionner une variante"
     enterprise:
       select_outgoing_oc_products_from: Sélectionner les produits sortants pour le cycle de vente parmi
