--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -621,6 +621,7 @@ ru:
         max_fulfilled_units: "Максимально выполненных единиц"
         order_error: "Некоторые ошибки должны быть устранены, прежде чем вы сможете обновить заказы.\nЛюбые поля с красной рамкой содержат ошибки."
         variants_without_unit_value: "ВНИМАНИЕ: Некоторые варианты не имеют значения единицы"
+        all: "Все"
       select_variant: "Выбрать вариант"
     enterprise:
       select_outgoing_oc_products_from: Выберите исходящие товары OC из
