--- a/config/locales/de_DE.yml
+++ b/config/locales/de_DE.yml
@@ -600,6 +600,7 @@ de_DE:
         max_fulfilled_units: "Max erfüllte Einheiten"
         order_error: "Fehler müssen behoben werden, bevor Sie Aufträge aktualisieren können.\nFelder mit roten Rahmen enthalten Fehler."
         variants_without_unit_value: "WARNUNG: Manche Varianten haben keinen Einheitswert"
+        all: "Alle"
       select_variant: "Wählen Sie eine Variante"
     enterprise:
       select_outgoing_oc_products_from: Wählen Sie ausgehende BZ-Produkte von
