--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -620,6 +620,7 @@ it:
         max_fulfilled_units: "Massime unità riempite"
         order_error: "Qualche errore deve essere risolto prima che tu possa aggiornare gli ordini.\nOgni campo con i bordi rossi contiene errori."
         variants_without_unit_value: "ATTENZIONE: Alcune varianti non hanno il valore dell'unità"
+        all: "Tutti"
       select_variant: "Seleziona una variante"
     enterprise:
       select_outgoing_oc_products_from: Seleziona prodotti OC in uscita da
