--- a/config/locales/nl_BE.yml
+++ b/config/locales/nl_BE.yml
@@ -615,6 +615,7 @@ nl_BE:
         max_fulfilled_units: "Maximum aantal vervulde eenheden"
         order_error: "Sommige fouten moeten opgelost worden voordat je je bestelling kan updaten.\nDe velden met rode randen bevatten fouten."
         variants_without_unit_value: "Waarschuwing: Sommige varianten hebben geen eenheidswaarde."
+        all: "Alle"
       select_variant: "Selecteer een variant"
     enterprise:
       select_outgoing_oc_products_from: Selecteer uitgaande OC producten uit
