--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1682,6 +1682,7 @@ See the %{link} to find out more about %{sitename}'s features and to start using
 
   maps_open: "Open"
   maps_closed: "Closed"
+  map_title: "Map"
 
   hubs_buy: "Shop for:"
   hubs_shopping_here: "Shopping here"
