--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3733,6 +3733,7 @@ See the %{link} to find out more about %{sitename}'s features and to start using
       transactions:
         transaction_history: Transaction History
         authorisation_required: Authorisation Required
+        authorise: Authorize
       open_orders:
         order: Order
         shop: Shop
