--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3617,6 +3617,7 @@ See the %{link} to find out more about %{sitename}'s features and to start using
       pending: pending
       ready: ready
       shipped: shipped
+      canceled: canceled
     payment_states:
       balance_due: balance due
       completed: completed
